# pikapika

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml  test-pypi.yml
docs/: README.md  index.html  script.js  styles.css
scripts/: release.py
src/pikapika/: __init__.py
tests/: test_pikapika.py
