[project]
name = "pikapika"
version = "0.1.0"
description = "A Python CLI utility to organize your Windows Downloads folder"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "send2trash>=1.8.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Topic :: Utilities",
  "Topic :: System :: Filesystems",
  "Intended Audience :: End Users/Desktop",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[project.scripts]
pikapika = "pikapika:main"
